# projecto-final-null-terminators

./: .gitignore  CMakeLists.txt  README.md
docs/: README.md
include/utec/agent/: DigitClassifier.h
include/utec/algebra/: Tensor.h
include/utec/nn/: activation.h  dense.h  layer.h  loss.h  neural_network.h
include/utils/: mnist_loader.h
src/: digit_classifier.cpp  digit_classifier.py
src/utec/: main.cpp
src/utec/agent/: DigitClassifier.cpp
src/utec/nn/: neural_network.cpp
src/utils/: mnist_loader.cpp
